--- a/css/header.css
+++ b/css/header.css
@@ -1,12 +1,28 @@
+.header {
+  display: flex;
+  justify-content: end;
+  align-items: center;
+  padding: 1% 20px;
+  gap: 20px;
+}
+
 .header__title {
   font-family: "Playfair Display";
   font-size: 86px;
   line-height: 120%;
   letter-spacing: 0px;
   font-weight: 600;
+  flex-grow: 1;
 }
 
-.header__ref {
+.header__navigation {
+  display: flex;
+  gap: 55px;
+  align-items: center;
+}
+
+.header__ref,
+.header__message {
   font-size: 24px;
   text-decoration: none;
   text-align: center;
