--- a/css/hero-section.css
+++ b/css/hero-section.css
@@ -1,9 +1,26 @@
+.hero-section {
+  min-height: 630px;
+  background-image: url("../img/inside-weather.jpg");
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.hero-section__logo {
+  background-color: white;
+  padding: 110px 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 14px;
+}
+
 .hero-section__title {
   font-family: "Playfair Display";
   font-size: 86px;
   line-height: 120%;
   letter-spacing: 0px;
   text-align: center;
+  min-width: 650px;
 }
 
 .hero-section__subtitle {
