--- a/css/biography.css
+++ b/css/biography.css
@@ -3,7 +3,7 @@
   flex-flow: row wrap;
   color: #0D0D0D;
   font-size: 18px;
-  padding: 0 137.5px;
+  margin-top: 150px;
   justify-content: space-between;
 }
 
