--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @import url(../css/reset.css);
 @import url(../css/fonts.css);
 /* Для общих свойств */
-@import url(../css/body.css);
+@import url(../css/base.css);
 @import url(../css/header.css);
 @import url(../css/hero-section.css);
 @import url(../css/biography.css);
