--- a/css/biography.css
+++ b/css/biography.css
@@ -3,8 +3,9 @@
   flex-flow: row wrap;
   color: #0D0D0D;
   font-size: 18px;
-  margin-top: 150px;
   justify-content: space-between;
+  margin-top: 150px;
+  margin-bottom: 150px;
 }
 
 .biography__image {
