--- a/css/designers.css
+++ b/css/designers.css
@@ -1,11 +1,37 @@
+.designers {
+  margin-bottom: 130px;
+}
+
+
+.designers__container {
+  display: flex;
+  justify-content: space-between;
+  overflow-y: auto;
+  align-items: end;
+}
+
+.designers__image {
+  margin-bottom: 24px;
+}
+
+.designers__big-image {
+  padding-left: 42%;
+}
+
+.designers__card {
+  margin-left: 20px;
+}
+
 .designers__text {
+  line-height: 117%;
   font-size: 16px;
   font-weight: 400;
+  margin-bottom: 20px;
 }
 
 .designers__header {
-  text-transform: uppercase;
   font-size: 24px;
+  margin-bottom: 30px;
 }
 
 .designers__header,
