--- a/css/testimonials.css
+++ b/css/testimonials.css
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-columns: 8% 40% 5% 35%;
   column-gap: 26px;
+  margin-bottom: 150px;
 }
 
 .testimonials__links-container {
