--- a/css/designers.css
+++ b/css/designers.css
@@ -14,10 +14,6 @@
   margin-bottom: 24px;
 }
 
-.designers__big-image {
-  padding-left: 42%;
-}
-
 .designers__card {
   margin-left: 20px;
 }
@@ -38,4 +34,35 @@
 .designers__subheader,
 .designers__accent {
   font-weight: 700;
+}
+
+@media (min-width: 1025px) {
+  .designers__big-image {
+    padding-left: 42%;
+  }
+}
+
+@media(max-width: 1024px) {
+  .designers {
+    margin-bottom: 63px;
+  }
+
+  .designers__image {
+    max-width: 310px;
+    min-height: 440px;
+    object-fit: cover;
+  }
+
+  .designers__card {
+    margin-left: 16px;
+  }
+
+  .designers__container {
+    align-items: stretch;
+  }
+
+  .designers__header {
+    font-size: 18px;
+  }
+
 }
