--- a/css/fonts.css
+++ b/css/fonts.css
@@ -59,11 +59,20 @@
 }
 
 @font-face {
-  font-family: 'Bitter Regular';
+  font-family: 'Bitter';
   src: url('../fonts/bitter_regular.eot');
   src: url('../fonts/bitter_regular.eot?#iefix') format('embedded-opentype'),
     url('../fonts/bitter_regular.woff2') format('woff2'),
     url('../fonts/bitter_regular.woff') format('woff'),
     url('../fonts/bitter_regular.ttf') format('truetype');
-  font-weight: 400;
+}
+
+@font-face {
+  font-family: 'Bitter';
+  src: url('../fonts/bitter_light.eot');
+  src: url('../fonts/bitter_light.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/bitter_light.woff2') format('woff2'),
+    url('../fonts/bitter_light.woff') format('woff'),
+    url('../fonts/bitter_light.ttf') format('truetype');
+  font-weight: 300;
 }
