--- a/css/footer.css
+++ b/css/footer.css
@@ -37,3 +37,18 @@
   text-align: right;
   font-weight: 400;
 }
+
+@media(max-width: 1024px) {
+  .footer {
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    padding: 43px 15px;
+    gap: 6px;
+  }
+
+  .footer__slogan {
+    align-self: flex-end;
+    order: -1;
+  }
+}
