--- a/css/hero-section.css
+++ b/css/hero-section.css
@@ -1,12 +1,18 @@
 .hero-section {
   min-height: 630px;
-  background-image: url("../img/inside-weather.jpg");
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-bottom: 150px;
+}
+
+.hero-section__background {
+  width: 100%;
+  min-height: 630px;
 }
 
 .hero-section__logo {
+  position: absolute;
   background-color: white;
   padding: 110px 20px;
   display: flex;
@@ -26,4 +32,30 @@
 .hero-section__subtitle {
   font-size: 20px;
   text-align: center;
+}
+
+@media(max-width: 1024px) {
+  .hero-section__logo {
+    position: inherit;
+    padding: 83px 20px;
+  }
+
+  .hero-section__subtitle {
+    font-size: 18px;
+  }
+
+  .hero-section {
+    flex-direction: column;
+    gap: 20px;
+    margin-bottom: 83px;
+  }
+
+  .hero-section__title {
+    font-size: 70px;
+  }
+
+  .hero-section__background {
+    min-height: 382px;
+    width: 100%;
+  }
 }
