--- a/css/strong-points.css
+++ b/css/strong-points.css
@@ -35,10 +35,11 @@
 }
 
 .strong-points__list {
-  font-family: "Bitter Regular";
+  font-family: "Bitter";
   font-size: 34px;
   padding-left: 115px;
   line-height: 125%;
+  font-weight: 400;
 }
 
 @supports (display: grid) {
@@ -46,6 +47,48 @@
     display: grid;
     justify-content: space-between;
     overflow-y: auto;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(5, 1fr);
+  }
+}
+
+@media(max-width: 1024px) {
+
+  .strong-points__article {
+    margin-top: 4px;
+    margin-bottom: 16px;
+    margin-left: 16px;
+  }
+
+  .strong-points__article_wide {
+    order: -1;
+    min-width: 206px;
+    margin-top: 0px;
+  }
+
+  .strong-points__image {
+    width: 310px;
+    height: 446px;
+    object-fit: cover;
+  }
+
+
+  .strong-points__header {
+    font-size: 18px;
+    margin-bottom: 32px;
+  }
+
+  .strong-points__subheader {
+    font-size: 46px;
+    margin-bottom: 22px;
+  }
+
+  .strong-points__list {
+    font-size: 24px;
+    padding-left: 15px;
+    line-height: 154%;
+  }
+
+  .strong-points {
+    margin-bottom: 63px;
   }
 }
