--- a/css/testimonials.css
+++ b/css/testimonials.css
@@ -1,12 +1,11 @@
 .testimonials {
   display: grid;
-  grid-template-columns: 8% 40% 5% 35%;
   column-gap: 26px;
+  row-gap: 20px;
   margin-bottom: 150px;
 }
 
 .testimonials__links-container {
-  grid-row: 1/3;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -15,15 +14,11 @@
 }
 
 .testimonials__image {
-  grid-row: 1/3;
   object-fit: cover;
   width: 97%;
 }
 
 .testimonials__header {
-  grid-row: 1/3;
-  writing-mode: tb-rl;
-  transform: rotate(180deg) translateX(30%);
   font-size: 24px;
   font-weight: 700;
   text-align: right;
@@ -31,8 +26,6 @@
 }
 
 .testimonials__links {
-  writing-mode: tb-rl;
-  transform: rotate(180deg) translateX(-8%);
   font-size: 16px;
   text-align: left;
   text-decoration: none;
@@ -45,13 +38,14 @@
 
 .testimonials__quote {
   margin: auto;
-  padding-top: 3%;
+  padding-top: 5%;
   quotes: none;
-  font-family: "Bitter Regular";
+  font-family: "Bitter";
   font-size: 32px;
   text-align: center;
   line-height: 120%;
   letter-spacing: -1px;
+  max-width: 200px;
 }
 
 .testimonials__customer-image {
@@ -59,4 +53,75 @@
   margin: 0 auto;
   object-fit: cover;
   width: 53%;
+}
+
+@media (min-width: 1025px) {
+  .testimonials {
+    grid-template-columns: 8% 40% 5% 35%;
+  }
+
+  .testimonials__header {
+    writing-mode: tb-rl;
+    align-self: start;
+    transform: rotate(180deg) translateX(32%);
+  }
+
+  .testimonials__links {
+    writing-mode: tb-rl;
+    transform: rotate(180deg) translateX(-8%);
+  }
+
+  .testimonials__links-container,
+  .testimonials__image,
+  .testimonials__header {
+    grid-row: 1/3;
+  }
+}
+
+@media(max-width: 1024px) {
+  .testimonials {
+    grid-template-columns: 50% 45%;
+    grid-template-rows: repeat(3, auto);
+    row-gap: 29px;
+    margin-bottom: 81px;
+  }
+
+  .testimonials__header {
+    font-size: 18px;
+  }
+
+  .testimonials__links-container {
+    flex-direction: row;
+    justify-content: start;
+    align-items: center;
+    gap: 82px;
+  }
+
+  .testimonials__links-container {
+    grid-area: 3;
+  }
+
+  .testimonials__header,
+  .testimonials__links-container {
+    grid-column: 1/-1;
+  }
+
+  .testimonials__image {
+    display: none;
+  }
+
+  .testimonials__customer-image {
+    padding-top: 0;
+    object-fit: cover;
+    aspect-ratio: 1/1;
+    width: 100%;
+  }
+
+  .testimonials__quote {
+    font-size: 30px;
+    font-weight: 300;
+    height: 100%;
+    padding-top: 27px;
+    max-width: 300px;
+  }
 }
