--- a/css/hero-section.css
+++ b/css/hero-section.css
@@ -1,18 +1,14 @@
 .hero-section {
   min-height: 630px;
+  background-image: image-set("../img/hero-desktop.jpg" 1x, "../img/hero-desktop@2x.jpg" 2x);
   display: flex;
   justify-content: center;
   align-items: center;
   margin-bottom: 150px;
-}
-
-.hero-section__background {
-  width: 100%;
-  min-height: 630px;
+  background-size: cover;
 }
 
 .hero-section__logo {
-  position: absolute;
   background-color: white;
   padding: 110px 20px;
   display: flex;
@@ -35,27 +31,49 @@
 }
 
 @media(max-width: 1024px) {
+  .hero-section {
+    justify-content: start;
+    align-items: start;
+    background-image: image-set("../img/hero-tablet.jpg" 1x, "../img/hero-tablet@2x.jpg" 2x);
+    margin-bottom: 83px;
+    min-height: 683px;
+  }
+
   .hero-section__logo {
-    position: inherit;
-    padding: 83px 20px;
+    height: 50%;
+    width: 100%;
+    padding: 83px 0 106px;
   }
 
   .hero-section__subtitle {
     font-size: 18px;
   }
 
-  .hero-section {
-    flex-direction: column;
-    gap: 20px;
-    margin-bottom: 83px;
-  }
-
   .hero-section__title {
     font-size: 70px;
+    min-width: 100%
   }
 
   .hero-section__background {
     min-height: 382px;
+    width: 100%;
+  }
+}
+
+@media (max-width: 767px) {
+
+  .hero-section {
+    background-image: image-set("../img/hero-mobile.jpg" 1x, "../img/hero-mobile@2x.jpg" 2x);
+  }
+
+  .hero-section__logo {
+    height: 50%;
+    width: 100%;
+    padding: 84px 0 103px;
+  }
+
+  .hero-section__title {
+    font-size: 70px;
     width: 100%;
   }
 }
