--- a/css/_modal.scss
+++ b/css/_modal.scss
@@ -17,6 +17,10 @@
     padding-top: 10px;
   }
 
+  &__text {
+    resize: none;
+  }
+
   &__buttons-container {
     padding-top: 20px;
     display: flex;
@@ -24,6 +28,7 @@
     align-items: center;
   }
 }
+
 
 .hidden {
   display: none;
