--- a/css/style.css
+++ b/css/style.css
@@ -993,6 +993,10 @@ h2 {
   padding-top: 10px;
 }
 
+.callback__text {
+  resize: none;
+}
+
 .callback__buttons-container {
   padding-top: 20px;
   display: -webkit-box;
