--- a/css/style.css
+++ b/css/style.css
@@ -978,6 +978,8 @@ h2 {
 }
 
 .callback {
+  max-width: 440px;
+  min-height: 533px;
   background: #fff;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -986,15 +988,66 @@ h2 {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
   padding: 20px;
+  border-radius: 10px;
+  position: relative;
+}
+
+.callback::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border: 2px solid #FFFFFF;
+  border-radius: 10px;
+  z-index: -1;
+  -webkit-transform: rotate(1.9deg);
+          transform: rotate(1.9deg);
+  top: -5px;
+  left: 0px;
+}
+
+.callback__header {
+  font-weight: 700;
+  font-size: 24px;
+  padding-bottom: 10px;
 }
 
 .callback__label {
   padding-top: 10px;
+  padding-bottom: 5px;
+  font-size: 18px;
+  font-weight: 600;
+}
+
+.callback__question {
+  font-weight: 400;
+  font-size: 18px;
+}
+
+.callback__name {
+  border: 1px solid #B3B3B3;
+  background: #fff;
+  border-radius: 8px;
+  min-height: 54px;
+}
+
+.callback__email {
+  border: 1px solid #B3B3B3;
+  background: #fff;
+  border-radius: 8px;
+  min-height: 54px;
 }
 
 .callback__text {
+  border: 1px solid #B3B3B3;
+  background: #fff;
+  border-radius: 8px;
+  min-height: 54px;
   resize: none;
+  min-height: 115px;
 }
 
 .callback__buttons-container {
@@ -1002,11 +1055,37 @@ h2 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+.callback__reject {
+  border: 1px solid #B3B3B3;
+  background: #fff;
+  border-radius: 8px;
+  min-height: 54px;
+  width: 49%;
+  font-size: 18px;
+  font-weight: 600;
+}
+
+.callback__accept {
+  border: 1px solid #B3B3B3;
+  background: #fff;
+  border-radius: 8px;
+  min-height: 54px;
+  width: 49%;
+  background: #000000;
+  color: #FFFFFF;
+  font-size: 18px;
+}
+
+.callback__accept-decoration {
+  padding-right: 10px;
 }
 
 .hidden {
