--- a/css/_testimonials.scss
+++ b/css/_testimonials.scss
@@ -32,7 +32,7 @@
     font-size: $fontSizeL;
     font-weight: 700;
     text-align: right;
-    color: #000000;
+    color: $baseColor;
   }
 
   &__quote {
