--- a/css/_var.scss
+++ b/css/_var.scss
@@ -3,3 +3,10 @@ $mobileWidth: 767px;
 $fontSizeS: 16px;
 $fontSizeM: 18px;
 $fontSizeL: 24px;
+$baseColor: #000000;
+$secondaryColor: #0D0D0D;
+$hoverColor: #A07C72;
+$activeColor: #E0B59F;
+$borderColor: #CCCCCC;
+$borderFocusColor: #B3B3B3;
+$baseBackgroundColor: #FFFFFF;
