--- a/css/_header.scss
+++ b/css/_header.scss
@@ -1,9 +1,3 @@
-  %buttons {
-    font-size: $fontSizeL;
-    text-decoration: none;
-    text-align: center;
-  }
-
   .header {
     display: flex;
     justify-content: end;
@@ -22,13 +16,31 @@
     }
 
     &__ref {
-      @extend %buttons;
-      padding-left: 55px;
+      margin-left: 55px;
     }
 
     &__message {
-      @extend %buttons;
       padding-left: 20px;
+    }
+
+    &__message svg {
+      transition: fill 0.4s;
+      fill: $baseColor;
+    }
+
+    &__message:hover svg {
+      fill: $hoverColor
+    }
+
+    &__message:active svg {
+      fill: $activeColor
+    }
+
+    &__message:focus svg {
+      fill: $hoverColor;
+      border-radius: 10px;
+      outline: 1.5px solid $activeColor;
+      outline-offset: 5px;
     }
 
     &__hide {
@@ -57,7 +69,7 @@
       }
 
       &__ref:hover {
-        color: #A07C72;
+        color: $hoverColor;
       }
 
       &__navigation {
