--- a/css/_mixins.scss
+++ b/css/_mixins.scss
@@ -25,8 +25,10 @@
 }
 
 @mixin addBorder() {
-  border: 1px solid #B3B3B3;
+  border: 1px solid $borderFocusColor;
   background: #fff;
   border-radius: 8px;
   min-height: 54px;
+  outline-color: transparent;
+  transition: color 0.4s, outline-color 0.5s, background 0.8s;
 }
