--- a/css/_strong-points.scss
+++ b/css/_strong-points.scss
@@ -4,7 +4,7 @@
   &__header {
     font-size: $fontSizeL;
     font-weight: 700;
-    color: #000000;
+    color: $baseColor;
     margin-bottom: 30px;
   }
 
@@ -26,7 +26,7 @@
 
   &__subheader {
     @include fontPlayfair(500);
-    color: #000000;
+    color: $baseColor;
     margin-bottom: 30px;
     text-align: center;
   }
