--- a/css/_mixins.scss
+++ b/css/_mixins.scss
@@ -20,7 +20,7 @@
 }
 
 @mixin rotate($translateX) {
-  writing-mode: tb-rl;
+  writing-mode: vertical-rl;
   transform: rotate(180deg) translateX($translateX);
 }
 
