--- a/css/_strong-points.scss
+++ b/css/_strong-points.scss
@@ -15,19 +15,20 @@
     align-items: start;
   }
 
-  &__article {
+  &__figure {
     margin-bottom: 20px;
     margin-left: 20px;
   }
 
-  &__article_wide {
+  &__figure_wide {
     min-width: 450px;
   }
 
   &__subheader {
     @include fontPlayfair(500);
     color: $baseColor;
-    margin-bottom: 30px;
+    margin-top: -4px;
+    margin-bottom: 14px;
     text-align: center;
   }
 
@@ -58,13 +59,13 @@
       object-fit: cover;
     }
 
-    &__article {
+    &__figure {
       margin-top: 4px;
       margin-bottom: 16px;
       margin-left: 16px;
     }
 
-    &__article_wide {
+    &__figure_wide {
       order: -1;
       min-width: 206px;
       margin-top: 0px;
@@ -77,7 +78,7 @@
 
     &__subheader {
       font-size: 46px;
-      margin-bottom: 22px;
+      margin-bottom: 16px;
     }
 
     &__list {
